# dobot_magician_driver

./: CHANGELOG.md  CMakeLists.txt  README.md  _config.yml  package.xml
_layout/: _default.html
dobot_magician_description/: CMakeLists.txt  package.xml
dobot_magician_description/launch/: load_dobot_magician.launch  view_dobot_magician.launch
dobot_magician_description/meshes/collision/urdf_models/: 3DOF.urdf  dobot_with_rail.urdf  extended_gripper.urdf  gripper.urdf  pen.urdf  suction_cup.urdf
dobot_magician_description/model/: clean_model_no_macros.urdf  dobot_common.urdf.xacro  magician.urdf.xacro  magician_standalone.urdf.xacro
dobot_magician_description/rviz/: view_urdf.rviz
dobot_magician_driver/: CMakeLists.txt
dobot_magician_driver/config/: ros_controllers.yaml
dobot_magician_driver/include/dobot_magician_driver/: dobot_communication.h  dobot_controller.h  dobot_hardware_interface.h  dobot_ros_control.h  dobot_ros_wrapper.h  dobot_state.h  dobot_utils.h
dobot_magician_driver/launch/: dobot_magician.launch  dobot_magician_ros_control.launch
dobot_magician_driver/src/: dobot_communication.cpp  dobot_controller.cpp  dobot_hardware_interface.cpp  dobot_ros_control.cpp  dobot_ros_wrapper.cpp  dobot_state.cpp
include/dobot_magician_driver/: dobot_communication.h  dobot_communication.hpp  dobot_const.hpp  dobot_controller.h  dobot_driver.h  dobot_ros_wrapper.h  dobot_ros_wrapper_interface.h  dobot_state.h  dobot_states.h  dobot_utils.h  serial_port.hpp
launch/: dobot_magician.launch
matlab/: DobotMagician.m  test_dobot.asv  test_dobot.m
old/: dobot_ros_wrapper.cpp
python/: sc_test_script.py  simple_movement.py
src/: dobot_communication.cpp  dobot_controller.cpp  dobot_driver.cpp  dobot_ros_wrapper.cpp  dobot_ros_wrapper.cpp.autosave  dobot_ros_wrapper_interface.cpp  dobot_state.cpp  old_dobot_communication.cpp  serial_port.cpp
srv/: GetCPParams.srv  GetIOAnalogInput.srv  GetIODigitalInput.srv  SetCPCmd.srv  SetCPParams.srv  SetEMotor.srv  SetEStop.srv  SetEndEffector.srv  SetIODigitalOutput.srv  SetIOMultiplexing.srv  SetIOPWMOutput.srv  SetLinearRail.srv  SetSuctionCup.srv  SetTargetPoints.srv
supporting/: 43-dobot_magician.rules
